Added most of the postinst file; added templates; added nsswitch.conf

--- a/debian/control
+++ b/debian/control
@@ -8,4 +8,5 @@ Standards-Version: 3.9.3
 Package: openmediavault-active-directory
 Architecture: all
 Depends: ${misc:Depends}, libkrb53 krb5-config krb5-user
+Conflicts: openmediavault-ldap
 Description: Connect OpenMediaVault to an Active Directory
