Introduce the custom debian/control field XB-Plugin-Section which will be used to categorize OMV plugins.

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,6 @@
 Source: openmediavault-active-directory
-Section: misc
+Section: net
+XB-Plugin-Section: administration
 Priority: optional
 Maintainer: OpenMediaVault Plugin Developers <plugins@omv-extras.org>
 Build-Depends: debhelper (>= 8 )
